# bar-booking

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  Диаграмма без названия.drawio
Common/Styles/: Styles.qrc  bar-booking.qss
DataTransfer/: Bar.cpp  Bar.h  ITransport.h  ServerTransport.cpp  ServerTransport.h  User.cpp  User.h
Forms/FormsAuthorization/: FormAuthorization.cpp  FormAuthorization.h  FormAuthorization.ui
Forms/FormsBar/: FormBarInspect.cpp  FormBarInspect.h  FormBarInspect.ui  FormCreateBar.cpp  FormCreateBar.h  FormCreateBar.ui
Forms/FormsBarView/: FormAddNewBar.cpp  FormAddNewBar.h  FormAddNewBar.ui  FormBarSmallPreview.cpp  FormBarSmallPreview.h  FormBarSmallPreview.ui  FormBarView.cpp  FormBarView.h  FormBarView.ui
Forms/FormsOwner/: FormOwner.cpp  FormOwner.h  FormOwner.ui
Forms/FormsRegistration/: FormRegistration.cpp  FormRegistration.h  FormRegistration.ui
